# rhino.2024

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
docs/examples/: helloworld.py  test_helloworld.py
docs/source/: api.rst  conf.py  index.rst
src/rhino/: __init__.py  response.py
src/rhino/_sync/: context.py  mapper.py  request.py  resource.py  types.py
tests/sync/: test_application.py
