[project]
name = "rhino"
version = "0.0.1"
authors = [
    { name="Stanis Trendelenburg", email="stanis.trendelenburg@gmail.com" }
]
description = "A microframework for building RESTful web services"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/trendels/rhino.2024"
Issues = "https://github.com/trendels/rhino.2024/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
